--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,32 +1,49 @@
-@(message: String)
+<!DOCTYPE html>
 
-@main("Bienvenue dans l'intallateur du CD DeViNT 2012!") {
-    <p>
-		Vous êtes sur le point d'installer les projets présents sur ce 
-		CD DeViNT ic.getYear() et nous vous en remercions.
-	</p>
-	<p>
-		Les logiciels de ce CD sont conçus et développés par les élèves 
-		ingénieurs du département Sciences Informatiques de l'école 
-		Polytech Nice Sophia dans le cadre de leurs projets de troisième 
-		année.
-	</p>
-	<p>
-		Ces projets s'adressent en premier lieu aux élèves déficients 
-		visuels du Collège ou de l'enseignement primaire, aidés de leur 
-		entourage famille, enseignants et médecins, associations.
-	</p>
-	<p>
-		Le CD fonctionne a priori sous Windows, XP, Seven (32 bits et 
-		64 bits), et pour certains projets sous Linux, ou sous Mac OS X.
-	</p>
-	<p>
-		Le CD est distribué gratuitement sur demande, dans le cadre d'une 
-		utilisation non commerciale et non militaire.
-	</p>
-	<p>
-		Cliquez sur le bouton 'Suivant' pour continuer l'installation.
-	</p>
-	<input type="button" value="Annuler" name="cancel" />
-	<input type="button" value="Suivant" name="next" />
-}
+<html>
+    <head>
+        <title>Bienvenue dans l'intallateur du CD DeViNT 2012!</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/index.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    </head>
+    <body>
+    	<div class="header">
+    		<img class="index_banner" src="@routes.Assets.at("images/header.png")" alt="logo devint"/>
+            <h1>Bienvenue dans l'intallateur du CD DeViNT 2012!</h1>
+    	</div>
+        <div class="content">
+			<p>
+				Vous êtes sur le point d'installer les projets présents sur ce 
+				CD DeViNT ic.getYear() et nous vous en remercions.
+			</p>
+			<p>
+				Les logiciels de ce CD sont conçus et développés par les élèves 
+				ingénieurs du département Sciences Informatiques de l'école 
+				Polytech Nice Sophia dans le cadre de leurs projets de troisième 
+				année.
+			</p>
+			<p>
+				Ces projets s'adressent en premier lieu aux élèves déficients 
+				visuels du Collège ou de l'enseignement primaire, aidés de leur 
+				entourage famille, enseignants et médecins, associations.
+			</p>
+			<p>
+				Le CD fonctionne a priori sous Windows, XP, Seven (32 bits et 
+				64 bits), et pour certains projets sous Linux, ou sous Mac OS X.
+			</p>
+			<p>
+				Le CD est distribué gratuitement sur demande, dans le cadre d'une 
+				utilisation non commerciale et non militaire.
+			</p>
+			<p>
+				Cliquez sur le bouton 'Suivant' pour continuer l'installation.
+				Fermez votre navigateur pour quitter l'installation.
+			</p>
+			<a href="@routes.Application.licence" />Suivant</a>
+		</div>
+        <div class="footer">
+        
+        </div>
+    </body>
+</html>
