--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     	<div class="header">
-    		<img src="@routes.Assets.at("images/header.png")" alt="logo devint"/>
+    		<img src="@routes.Assets.at("images/logo_devint.png")" alt="logo devint"/>
             <h1>@title</h1>
     	</div>
         <div class="content">
